add reaction handling and user settings management; refactor services and update Docker configuration